homelab/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  selector:
    matchLabels:
      app: ollama
  strategy:
    type: "Recreate"
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
        - name: ollamamodels
          persistentVolumeClaim:
            claimName: pvc-ollama
      containers:
      - name: ollama
        image: ollama/ollama:0.32.6
        resources:
          limits:
            cpu: "6000m"
        volumeMounts:
          - name: ollamamodels
            mountPath: /root/.ollama
        ports:
        - name: ollama
          containerPort: 11434
