homelab/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama
  name: ollama
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
